fix about us text on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,6 +24,7 @@ body {
   flex-direction: column;
   color: var(--text);
   background-color: var(--background);
+  overflow-y: auto;
 }
 
 a {
